[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gputools"
dynamic = ["version"]
description = "OpenCL accelerated volume processing"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [{name = "Martin Weigert", email = "martin.weigert@epfl.ch"}]
keywords = ["science", "image-processing", "opencl", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scipy",
    "numpy",
    "pyopencl>=2016.1",
    "reikna>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/maweigert/gputools"

[tool.setuptools.dynamic]
version = {attr = "gputools.version.__version__"}

[tool.setuptools.packages.find]
include = ["gputools*"]

[tool.setuptools.package-data]
gputools = [
    "core/kernels/*.cl",
    "convolve/kernels/*.cl",
    "denoise/kernels/*.cl",
    "deconv/kernels/*.cl",
    "noise/kernels/*.cl",
    "fft/kernels/*.cl",
    "transforms/kernels/*.cl",
]
